<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="1dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/image"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="22sp"
        android:text="@string/nameUser"
        android:layout_toRightOf="@+id/image"
        android:gravity="left"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="314dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/image"
        android:paddingRight="10dp"
        android:layout_toEndOf="@+id/image"
        android:gravity="left"
        android:text="@string/detail" />

</RelativeLayout>